--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body {
 }
 
 .containerup {
-    display: flex; 
+    display: flex;
     justify-content: flex-start;
     margin-left: 20px;
 }
 
 .container {
-    display: inline-flex; 
+    display: inline-flex;
     justify-content: flex-end;
 
     /*
@@ -139,10 +139,14 @@ nav ul li a {
 .card {
     position: absolute;
     width: 439px;
-    height: 230px;
+    height: 260px;
     background: #FFFFFF;
     border-radius: 0px;
-    padding-inline: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 50px;
+    margin-top: -50px;
+    z-index: 1;
 }
 
 .cardup {
@@ -151,6 +155,7 @@ nav ul li a {
     border-radius: 8px;
     width: 20%;
     justify-content: flex-start;
+    margin: 60px;
 }
 
 .card h3 {
@@ -186,8 +191,15 @@ nav ul li a {
     width: 30%;
     text-align: left;
     margin: 30px;
-    padding: 50px;
+}
 
+.image {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    z-index: 2;
 }
 
 .profile img {
@@ -197,17 +209,10 @@ nav ul li a {
     margin-bottom: 10px;
 }
 
-footer {
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-}
-
 .bluetext {
     color: #0D1A3C;
     font-size: 17px;
-    width: 50%;
+    width: 70%;
     padding: 0px;
 }
 
@@ -235,9 +240,9 @@ h1 {
 }
 
 h2 {
-    
+
     text-align: center;
     font-size: 200px;
     line-height: 30px;
-    
+
 }
