--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,11 @@ header .container {
 
 .logo {
     font-family: 'Inter', sans-serif;
-    font-size: 18px;
+    font-size: 28px;
     line-height: 150%;
-    font-weight: bold;
+    font-weight: normal;
     color: #0D1A3C;
-    ;
+    margin-left: 10px;
 }
 
 * {
@@ -54,8 +54,8 @@ nav ul {
     font-family: 'Inter', sans-serif;
     font-size: 18px;
     line-height: 100%;
-    margin: 0;
-    padding: 10px;
+    margin: 10;
+    padding: 15px;
     top: 0;
     text-align: right;
     height: 100%;
@@ -71,6 +71,7 @@ nav ul {
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 700px;
+    padding-right: 100px;
     display: flex;
     text-align: right;
 }
@@ -147,10 +148,10 @@ nav ul li a {
 .cardup {
     background: #f8f9fa;
     padding: 10px;
-    border-radius: 8px;
-    width: 20%;
+    width: 900px;
+    height: 120px;
     justify-content: flex-start;
-    margin: 60px;
+    margin: 40px;
 }
 
 .card h3 {
